[package]
name = "iota-sdk-native-bindings"
version = "0.1.1"
authors = [ "IOTA Stiftung" ]
edition = "2021"
description = "Native wrapper for the IOTA SDK library"
documentation = "https://wiki.iota.org/iota-sdk/welcome"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota-sdk-native-bindings"
license = "Apache-2.0"
keywords = [ "iota", "client", "wallet", "transaction", "native" ]
categories = [ "cryptography::cryptocurrencies" ]
publish = false

[lib]
name = "iota_sdk"
crate-type = [ "cdylib" ]
doc = false

[features]
default = ["std"]
std = ["zeroize/std"]

[dependencies]
iota-sdk-bindings-core = { git = "https://github.com/iotaledger/iota-sdk.git", branch = "develop", default-features = false, features = [
    "events", 
    "rocksdb", 
    "ledger_nano", 
    "storage", 
    "stronghold",
    "private_key_secret_manager"
] }

futures = { version = "0.3.28", default-features = false }
once_cell = { version = "1.18.0", default-features = false }
serde_json = { version = "1.0.107", default-features = false }
tokio = { version = "1.32.0", default-features = false }
log = { version = "0.4.20", default-features = false }
zeroize = { version = "1.6.0", default-features = false }